Found a fix for weird scroll behavior on ios

--- a/ParcelWs-V2/apps/trmrk-react-testapp/src/styles/main.scss
+++ b/ParcelWs-V2/apps/trmrk-react-testapp/src/styles/main.scss
@@ -6,7 +6,7 @@ body, #app-root {
 }
 
 .trmrk-app-panel-body {
-  padding-bottom: 160px;
+  /* padding-bottom: 160px; */
 }
 
 .my-resizable-panel {
